2009-04-20  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#110711, NB#109096 - Blank notifications displayed.

	* src/hd-notification-manager.c (hd_notification_manager_db_commit,
	  hd_notification_manager_db_insert_hint): Fix some warnings.

2009-04-17  Adam Endrodi <ext-adam.endrodi@nokia.com>

	Performance improvements.  In relationship with NB#110711.

	* hd-notification-manager.c:
	  Use prepared statements to write to the database.
	  Batch multiple notifications in one transaction
	  and commit them together.  This way you can have
	  ~20 notifications per second (or more if you're
	  a maniac).
	* hildon-home.c:
	  Exit cleanly on SIGINT.
	* hd-system-notifications.c:
	  Don't print bogus critical warnings when reprocessing
	  the notification database.

2009-04-16  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.22
	* configure.ac: 0.3.22

2009-04-16  Jan Arne Petersen  <jpetersen@openismus.com>

	Nokia: Fixes: NB#111271, NB#111255 - hildon-home crashes

	* src/hd-incoming-events.c (group_update_window_content): Use the real
	  group.
	  (get_mapped_category): Return the default category if not mapped.
	  (show_preview_window, switcher_window_response): Handle
	  notifications without a category.

	* debian/changelog: Update.

2009-04-09  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#108185 - Notification process doesn't check RAM level

	* configure.ac: Add libosso dep
	* debian/control: Add libosso dep

	* src/hd-incoming-events.c (group_notification_closed,
	  group_activate_notifications, group_window_response,
	  preview_window_response): Check for lowmem condition and do not
	  activate notifications in this case.

	* debian/changelog: Update.

2009-04-07  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.21
	* configure.ac: 0.3.21

2009-04-07  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#108935 - Chat and SMS message notifications are not grouped
	together
