@@ -1,3 +1,13 @@
+2009-04-17  Adam Endrodi <ext-adam.endrodi@nokia.com>
+
+	NB#09378 Details (sender , time) in the notification window is not updated.
+
+	group_update_window_content() calculates all the properties correctly
+	but HdIncomingEventWindow forgot to tell the new values to hd.
+
+	* src/hd-incoming-event-window.c (hd_incoming_event_window_set_property):
+	  Propagate changes to the time and body to thw X window.
+
 2009-04-20  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	Fixes: NB#110711, NB#109096 - Blank notifications displayed.
